# Energie_consommation_prediction

./: .gitignore  API.ipynb  Dockerfile  Modelisation.ipynb  ModelisationWIthoutList.ipynb  Modélisation.ipynb  README.md  pyproject.toml  ~$Présentation1.pptx
.ipynb_checkpoints/: API-checkpoint.ipynb  Modelisation-Copy1-checkpoint.ipynb
app/: bentofile.yaml  client.py  preprocessing.pipeline  requirements.txt  service.py  start.sh  test.py  transformers.py  y.scaler
app/model/: lasso.model  lasso_energy.model  lasso_ges.model  ridge.model  ridge_energy.model  svr.model  xgb.model  xgb.pickle  xgb_energy.model  xgb_ges.model
app/scaler/: y_energy.scaler  y_ges.scaler
