[tool.poetry]
name = "p6-anticipez-les-besoins-en-consommation-de-batiments"
version = "0.1.0"
description = ""
authors = ["yanggautier <yangguole@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
bentoml = "^1.3.15"
numpy = "1.24.3"
pandas = "1.5.3"
scikit-learn = "1.3.0"
xgboost = "2.0.1"
cloudpickle = "2.2.1"
requests = "^2.32.3"
pydantic-core = "^2.27.1"
folium = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
